Fix clipping box issue for scrolling projects on mobile

--- a/style.css
+++ b/style.css
@@ -1458,8 +1458,10 @@
           overflow-x: auto;
           scroll-snap-type: x mandatory;
           gap: 16px;
-          margin-top: 30px;
-          padding-bottom: 20px;
+          margin-top: 20px;
+          margin-left: -20px;
+          margin-right: -20px;
+          padding: 20px;
           -webkit-overflow-scrolling: touch;
           scrollbar-width: none; /* Firefox */
         }
